--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -21,5 +21,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/{esiea_s8}:{devops}
+          tags: ${{ secrets.DOCKER_USERNAME }}/esiea_s8:devops
           
